# zkFFT

./: README.md
zkFFT/: Cargo.toml
zkFFT/benches/: aggregated_zkFFT.rs  batch_verifier.rs  single_zkFFT.rs  zkFFT.rs
zkFFT/src/: aggregated_prover.rs  aggregated_verifier.rs  batch_verifier.rs  lib.rs  prover.rs  test.rs  utils.rs  verifier.rs
