[package]
name = "zkFFT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = "0.3.0"
halo2_gadgets = "0.3.0"
rand_core = { version = "0.6", features = ["getrandom"] }
ff = "0.13"
pasta_curves = "0.5"
rand = "0.8"
group = "0.13"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "zkFFT"
harness = false
